package org.example.pkgObj;

public class ProfileStats {
}
